Update with static pages and basic tests
Inlucdes the following pages:
  -About
  -Home
  -Help

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,4 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, "Help") %>
+<h1>Help</h1>
+<p>This is a stub static document, generated through RoR. Which is kind of great.</p>
+<p>This website has been created with the help of the <a href="htpt://www.railstutorial.org/">Ruby on Rails tutorial</a></p>
