Apply more advanced styleing
Added detailed styling for the stub and home screen.
Prepared to work for bootstrap.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,8 @@
-<body>
-  <h1>Home</h1>
-  <p>This is not an auto-generated document</p>
-</body>
+<div class="center jumbotron">
+  <h1>Home of the test application</h1>
+  <p>This is quite the uggly site, if you ask me...</p>
+  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org/' %>
