--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type%>"><%= message %><div>
+      <% end %>
+    </div>
       <%= yield %>
       <%= debug(params) if Rails.env.development? %>
     </div>
